<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home" />

        <item
            android:id="@+id/nav_register"
            android:title="@string/register"
            android:icon="@drawable/ic_register" />

        <item
            android:id="@+id/nav_login"
            android:title="@string/login"
            android:icon="@drawable/ic_login" />

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings" />

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout" />

    </group>

</menu>
