<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:padding="0dp"
    tools:context=".LoginActivity">

    <!-- Main content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="0dp">

        <!-- Header Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/header_background">

            <!-- Hamburger Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnOpenMenu"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:text="≡"
                android:textSize="24sp"
                android:backgroundTint="#2C3E50"
                android:textColor="#FFFFFF"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                android:layout_marginStart="16dp"
                android:contentDescription="App Logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingStart="10dp"/>
        </LinearLayout>

        <!-- White Card Section -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:padding="24dp">

                <!-- TextView for instruction -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:paddingBottom="20dp"
                    android:text="@string/title"
                    android:textColor="#388E3C"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!-- TextInputLayout for Email -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAccessibility="no"
                        android:layout_marginTop="20dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="16dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- TextInputLayout for Password -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    app:passwordToggleEnabled="true"
                    app:hintAnimationEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAccessibility="no"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="16dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Material Button for Login -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#388E3C"
                    android:importantForAccessibility="no"
                    android:padding="16dp"
                    android:text="@string/btn"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Footer Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/footer_background"
            android:layout_gravity="bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:padding="10dp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Navigation Drawer -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        app:menu="@menu/drawer_menu"
        app:itemTextAppearance="@style/MenuItemTextStyle"
        android:layoutDirection="rtl"
        app:itemVerticalPadding="50dp"
        android:backgroundTint="#526A83">
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
